# Curse_work_notepad

./: .env  CMakeLists.txt  Contact.h  Event.h  README.md  command_handler.cpp  command_handler.h  docker-compose.yml  general_functions.cpp  general_functions.h  init.sql  interface.py
client/: PeopleAndPlaces.spec  clientConfig.json  interface.py
server/: CMakeLists.txt  Dockerfile  command_handler.cpp  command_handler.h  config.json  general_functions.cpp  logrotate.conf
